--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@ layout: home
 <p>
 Principal Research Scientist<BR>
 <a href="https://security.ncsa.illinois.edu/">Cybersecurity Division</a><br>
-<a href="https://www.ncsa.illinois.edu/">National Center for
-Supercomputing Applications</a><BR>
+<a href="https://www.ncsa.illinois.edu/">National Center for Supercomputing Applications</a><BR>
 <a href="https://illinois.edu/">University of Illinois at Urbana-Champaign</a><BR>
 1205 West Clark Street<br>
 Urbana, Illinois 61801<br>
 <P>
-Email:
-<a href="mailto:jbasney@illinois.edu">jbasney@illinois.edu</a><br>
+Email: <a href="mailto:jbasney@illinois.edu">jbasney@illinois.edu</a><br>
 GitHub: <a href="https://github.com/jbasney/">jbasney</a><br>
 OpenPGP key: <a href="0x52812B01FA8F67A9.txt">0x52812B01FA8F67A9</a><br>
 ORCID iD: <a href="https://orcid.org/0000-0002-0139-0640">https://orcid.org/0000-0002-0139-0640</a><br>
@@ -42,8 +40,7 @@ Please contact me for a free copy of any publication listed below.
 <li>Jim Basney, Phuong Cao, and Terry Fleury, "Investigating Root
   Causes of Authentication Failures Using a SAML and OIDC
   Observatory," IEEE 6th International Conference on Dependability in
-  Sensor, Cloud and Big Data Systems and Applications
-  (DependSys),
+  Sensor, Cloud and Big Data Systems and Applications (DependSys),
   December 2020.
   <a href="https://doi.org/10.1109/DependSys51298.2020.00026">https://doi.org/10.1109/DependSys51298.2020.00026</a>
   <a href="https://github.com/cilogon/DependSys2020">[data]</a>
@@ -51,8 +48,7 @@ Please contact me for a free copy of any publication listed below.
   Basney, Terry Fleury, Jeff Gaynor, Dimuthu Wannipurage, Marcus
   Christie, Alexandru Mahmoud, Enis Afgan, and Marlon
   Pierce. 2020. Custos: Security Middleware for Science Gateways. In
-  Practice
-  and Experience in Advanced Research Computing (PEARC ’20), July
+  Practice and Experience in Advanced Research Computing (PEARC ’20), July
   26–30, 2020, Portland, OR, USA. ACM, New York, NY, USA, 13 pages.
   <a href="https://doi.org/10.1145/3311790.3396635">https://doi.org/10.1145/3311790.3396635</a>
 <li>You Alex Gao, Jim Basney, and Alex Withers. 2020. SciTokens SSH:
@@ -63,8 +59,7 @@ Please contact me for a free copy of any publication listed below.
   <a href="https://doi.org/10.1145/3311790.3399613">https://doi.org/10.1145/3311790.3399613</a>
 <li>Lee Liming, Jim Basney, John Paul Navarro, and Shava
   Smallen. 2020. Use Case Methodology in XSEDE System Integration. In
-  Practice
-  and Experience in Advanced Research Computing (PEARC ’20), July
+  Practice and Experience in Advanced Research Computing (PEARC ’20), July
   26–30, 2020, Portland, OR, USA. ACM, New York, NY, USA, 7 pages.
   <a href="https://doi.org/10.1145/3311790.3399622">https://doi.org/10.1145/3311790.3399622</a>
 <li>Jim Basney, Heather Flanagan, Terry Fleury, Jeff Gaynor,
@@ -99,8 +94,7 @@ Please contact me for a free copy of any publication listed below.
   <a href="https://doi.org/10.1051/epjconf/201921404014">https://doi.org/10.1051/epjconf/201921404014</a>
 <li>Alex Withers, Brian Bockelman, Derek Weitzel, Duncan A. Brown,
   Jeff Gaynor, Jim Basney, Todd Tannenbaum, Zach Miller,
-  "SciTokens: Capability-Based Secure Access to Remote Scientific
-  Data",
+  "SciTokens: Capability-Based Secure Access to Remote Scientific Data",
   PEARC '18: Practice and Experience in Advanced Research Computing,
   July 2018, Pittsburgh, PA, USA.
   <a href="https://doi.org/10.1145/3219104.3219135">https://doi.org/10.1145/3219104.3219135</a>
@@ -116,19 +110,16 @@ September 2014.
 Suresh Marru, Marlon Pierce, and Joe Stubbs,
 "Integrating Science Gateways with XSEDE Security: A Survey of
 Credential Management Approaches,"
-XSEDE Conference,
-July 2014, Atlanta, GA.
+XSEDE Conference, July 2014, Atlanta, GA.
 <a href="https://doi.org/10.1145/2616498.2616559">https://doi.org/10.1145/2616498.2616559</a>
 <li>Rion Dooley, Joe Stubbs, and Jim Basney,
 "The MyProxy Gateway,"
 <a href="https://sites.google.com/a/my.westminster.ac.uk/iwsg2014/">International Workshop on Science Gateways</a>,
-June 2014,
-Dublin, Ireland. 
+June 2014, Dublin, Ireland. 
 <a href="https://doi.org/10.1109/IWSG.2014.8">https://doi.org/10.1109/IWSG.2014.8</a>
 <li>Thejaka Amila Kanewala, Suresh Marru, Jim Basney, and Marlon Pierce,
 "A Credential Store for Multi-Tenant Science Gateways,"
-International Symposium on Cluster, Cloud and Grid Computing
-(CCGrid), 
+International Symposium on Cluster, Cloud and Grid Computing (CCGrid), 
 May 2014, Chicago, IL.
 <a href="https://doi.org/10.1109/CCGrid.2014.95">https://doi.org/10.1109/CCGrid.2014.95</a>
 <a href="https://hdl.handle.net/2022/17379">https://hdl.handle.net/2022/17379</a>
@@ -146,107 +137,85 @@ XSEDE Conference,
 July 2013, San Diego, CA.
 <a href="https://doi.org/10.1145/2484762.2484791">https://doi.org/10.1145/2484762.2484791</a>
 (Best Technology Paper)
-<!--
 <a href="cilogon-xsede13.pdf">[pdf]</a>
--->
 <a href="basney-cilogon-xsede13.pdf">[slides]</a>
 <a href="cilogon-poster-201307.pdf">[poster]</a>
 <li>Jim Basney, Rion Dooley, Jeff Gaynor, Suresh Marru, and Marlon Pierce,
 "Distributed Web Security for Science Gateways,"
-Gateway Computing Environments Workshop
-(GCE11),
+Gateway Computing Environments Workshop (GCE11),
 November 17, 2011, Seattle, WA.
 <a href="https://doi.org/10.1145/2110486.2110489">https://doi.org/10.1145/2110486.2110489</a>
-<li>
-Jim Basney and Jeff Gaynor,
+<li>Jim Basney and Jeff Gaynor,
 "An OAuth Service for Issuing Certificates to Science Gateways for
 TeraGrid Users,"
 TeraGrid Conference,
 July 18-21, 2011, Salt Lake City, UT.
 <a href="https://doi.org/10.1145/2016741.2016776">https://doi.org/10.1145/2016741.2016776</a>
 <a href="tg11-gateway-oauth-basney.pptx">[slides]</a>
-<li>
-Jim Basney, Von Welch, and Nancy Wilkins-Diehr,
+<li>Jim Basney, Von Welch, and Nancy Wilkins-Diehr,
 "TeraGrid Science Gateway AAAA Model: Implementation and Lessons Learned,"
 TeraGrid Conference,
 August 2-5, 2010, Pittsburgh, PA.
 <a href="https://doi.org/10.1145/1838574.1838576">https://doi.org/10.1145/1838574.1838576</a>
 (Best Paper: Gateways Track)
 <a href="tg10-gateway-aaaa.pptx">[slides]</a>
-<li>
-Jim Basney, Terry Fleury, and Von Welch,
+<li>Jim Basney, Terry Fleury, and Von Welch,
 "Federated Login to TeraGrid,"
-9th Symposium on Identity and Trust on the Internet
-(IDtrust 2010),
+9th Symposium on Identity and Trust on the Internet (IDtrust 2010),
 Gaithersburg, MD, April 2010.
 <a href="https://doi.org/10.1145/1750389.1750391">https://doi.org/10.1145/1750389.1750391</a>
 <a href="tgfed-slides.pdf">[slides]</a>
 <a href="tgfed-poster-201004.pdf">[poster]</a>
-<li>
-Mehran Ahsant and Jim Basney, 
+<li>Mehran Ahsant and Jim Basney, 
 "Workflows in Dynamic and Restricted Delegation," 
 Journal of Information System Security
 (<a href="https://www.jissec.org/Contents/V5/N4/V5N4-Ahsant.html">JISSec</a>),
-Volume 5, Number 4 (2009),
-Pages 3-26,
-ISSN 1551-0123.
+Volume 5, Number 4 (2009), Pages 3-26, ISSN 1551-0123.
 <em>Note: This is an extended version of an ARES/CISIS 2009 paper.</em>
-<li>
-Bobba, R., Muggli, J., Pant, M., Basney, J., and Khurana, H. 
+<li>Bobba, R., Muggli, J., Pant, M., Basney, J., and Khurana, H. 
 Usable secure mailing lists with untrusted servers.
 In Proceedings of the 8th Symposium on Identity and Trust on the
 Internet (Gaithersburg, Maryland, April 14 - 16, 2009). 
 K. Seamons, N. McBurnett, and T. Polk, Eds. 
 IDtrust '09, vol. 373. ACM, New York, NY, 103-116. 
 <a href="https://doi.org/10.1145/1527017.1527032">https://doi.org/10.1145/1527017.1527032</a>
-<li>
-Khurana, H., Basney, J., Bakht, M., Freemon, M., Welch, V., and
-Butler, R.
-Palantir: a framework for collaborative incident
-response and investigation. 
-In Proceedings of the 8th Symposium on
-Identity and Trust on the Internet 
+<li>Khurana, H., Basney, J., Bakht, M., Freemon, M., Welch, V., and Butler, R.
+Palantir: a framework for collaborative incident response and investigation. 
+In Proceedings of the 8th Symposium on Identity and Trust on the Internet 
 (Gaithersburg, Maryland, April 14 -16, 2009). 
 K. Seamons, N. McBurnett, and T. Polk, Eds. IDtrust '09,
 vol. 373. ACM, New York, NY, 38-51. 
 <a href="https://doi.org/10.1145/1527017.1527023">https://doi.org/10.1145/1527017.1527023</a>
-<li>
-Mehran Ahsant and Jim Basney, 
+<li> Mehran Ahsant and Jim Basney, 
 "Workflows in Dynamic and Restricted Delegation," 
 Proceedings of the 4th International Conference on Availability,
-Reliability and Security
-(ARES/CISIS 2009), 
+Reliability and Security (ARES/CISIS 2009), 
 Fukuoka, Japan, March 2009.
 <a href="https://doi.org/10.1109/ARES.2009.92">https://doi.org/10.1109/ARES.2009.92</a>
-<li>
-Mehran Ahsant, Esteban Tavalera Gonzalez and Jim Basney,
+<li>Mehran Ahsant, Esteban Tavalera Gonzalez and Jim Basney,
 "Security Credential Mapping in Grids,"
 Proceedings of the 4th International Conference on Availability,
 Reliability and Security (ARES/CISIS 2009), 
 Fukuoka, Japan, March 2009. 
 <a href="https://doi.org/10.1109/ARES.2009.93">https://doi.org/10.1109/ARES.2009.93</a>
-<li>
-Jim Basney, Stuart Martin, JP Navarro, Marlon Pierce, Tom Scavo, Leif
+<li>Jim Basney, Stuart Martin, JP Navarro, Marlon Pierce, Tom Scavo, Leif
 Strand, Tom Uram, Nancy Wilkins-Diehr, Wenjun Wu, and Choonhan Youn, 
 "The Problem Solving Environments of TeraGrid, Science Gateways, and the
 Intersection of the Two," 
 Fourth IEEE International Conference on eScience, 
 December 2008, pages 725-734.
 <a href="https://doi.org/10.1109/eScience.2008.75">https://doi.org/10.1016/j.ijhcs.2005.04.017</a>
-<li>
-Lee, A., Winslett, M., Basney, J., and Welch, V. 
+<li>Lee, A., Winslett, M., Basney, J., and Welch, V. 
 The Traust Authorization Service. 
 ACM Trans. Inf. Syst. Secur. 11, 1 (Feb. 2008), 1-33.
 <a href="https://doi.org/10.1145/1330295.1330297">https://doi.org/10.1109/ARES.2009.93</a>
-<li>
-Himanshu Khurana, Radostina Koleva, Jim Basney,
+<li>Himanshu Khurana, Radostina Koleva, Jim Basney,
 "Performance of Cryptographic Protocols for High-Performance,
 High-Bandwidth, High-Latency Grid Systems,"
 3rd IEEE International Conference on e-Science and Grid Computing, 
 Bangalore, India, December 2007.
 <a href="https://doi.org/10.1109/E-SCIENCE.2007.58">https://doi.org/10.1109/ARES.2009.93</a>
-<li>
-J. Rowanhill, G. Wasson, Z. Hill, J. Basney, Y. Kiryakov, J. Knight,
+<li>J. Rowanhill, G. Wasson, Z. Hill, J. Basney, Y. Kiryakov, J. Knight,
 A. Nguyen-Tuong, A. Grimshaw and M. Humphrey,
 "Dynamic System-wide Reconfiguration of Grid Deployments in Response
 to Intrusion Detections,"
@@ -254,101 +223,80 @@ High Performance Computation Conference (HPCC 2007),
 Sept 26-28, 2007. Houston, TX.
 <a href="https://doi.org/10.1007/978-3-540-75444-2_29">https://doi.org/10.1007/978-3-540-75444-2_29</a>
 <a href="ANDREA_GT4_HPCC2007.pdf">[pdf]</a>
-<li>
-Z. Hill, J. Rowanhill, A. Nguyen-Tuong, J. Basney, G. Wasson,
+<li>Z. Hill, J. Rowanhill, A. Nguyen-Tuong, J. Basney, G. Wasson,
 J. Knight and M. Humphrey, 
 "Meeting Virtual Organization Performance
 Goals through Adaptive Grid Reconfiguration,"
-8th IEEE/ACM
-International Conference on Grid Computing (Grid 2007), Austin, TX,
+8th IEEE/ACM International Conference on Grid Computing (Grid 2007), Austin, TX,
 Sept 19-21, 2007.
 <a href="https://doi.org/10.1109/GRID.2007.4354131">https://doi.org/10.1109/ARES.2009.93</a>
-<li>
-Mehran Ahsant, Jim Basney, and Lennart Johnsson,
+<li>Mehran Ahsant, Jim Basney, and Lennart Johnsson,
 "Dynamic, Context-Aware, Least-Privilege Grid Delegation,"
-8th IEEE/ACM
-International Conference on Grid Computing (Grid 2007), Austin, TX,
+8th IEEE/ACM International Conference on Grid Computing (Grid 2007), Austin, TX,
 Sept 19-21, 2007.
 <a href="https://doi.org/10.1109/GRID.2007.4354135">https://doi.org/10.1109/ARES.2009.93</a>
-<li>
-Jim Basney and Patrick Duda,
+<li>Jim Basney and Patrick Duda,
 "Clustering the Reliable File Transfer Service,"
 TeraGrid Conference, 
 Madison, WI, June 4-8, 2007.
 <a href="rrft.pdf">[pdf]</a>
 <a href="rrft.ppt">[ppt]</a>
-<li>
-Von Welch, Jim Barlow, James Basney, Doru Marcusiu, Nancy
-Wilkins-Diehr,
+<li>Von Welch, Jim Barlow, James Basney, Doru Marcusiu, Nancy Wilkins-Diehr,
 "A AAAA model to support science gateways with community accounts,"
 Concurrency and Computation: Practice and Experience,
 Volume 19, Issue 6, March 2007.
 <a href="https://doi.org/10.1002/cpe.1081">https://doi.org/10.1002/cpe.1081</a>
-<li>
-Himanshu Khurana and Jim Basney,
+<li>Himanshu Khurana and Jim Basney,
 "On the Risks of IBE,"
 Proceedings of the International Workshop on Applied PKC,
 Dalian, China, November 2006.
 <a href="IWAP06IBE.ppt">[ppt]</a>
 <a href="10.1.1.86.9742.pdf">[pdf]</a>
-<li>
-Himanshu Khurana, Jim Basney, Von Welch and Roy Campbell,
-"Operational Security Requirements for Large Collaborative Compute
-Infrastructures,"
+<li>Himanshu Khurana, Jim Basney, Von Welch and Roy Campbell,
+"Operational Security Requirements for Large Collaborative Compute Infrastructures,"
 International Workshop on Trusted Collaboration, 
 in conjunction with CollaborateCom,
 Atlanta, November 2006.
 <a href="https://doi.org/10.1109/COLCOM.2006.361884">https://doi.org/10.1109/COLCOM.2006.361884</a>
-<li>
-Terry Fleury, Jim Basney, and Von Welch,
+<li>Terry Fleury, Jim Basney, and Von Welch,
 "Single Sign-On for Java Web Start Applications Using MyProxy,"
 Proceedings of the ACM Workshop on Secure Web Services
 (associated with the 13th ACM Conference on Computer and
 Communications Security),
 November 3, 2006.
 <a href="https://doi.org/10.1145/1180367.1180384">https://doi.org/10.1145/1180367.1180384</a>
-<li>
-Mehran Ahsant, Jim Basney, Olle Mulmo, Adam Lee and Lennart Johnsson, 
+<li>Mehran Ahsant, Jim Basney, Olle Mulmo, Adam Lee and Lennart Johnsson, 
 "Toward An On-demand Restricted Delegation Mechanism for Grids," 
 Proceedings of the 7th IEEE/ACM International Conference on Grid
 Computing, Barcelona, September 28th-29th 2006.
 <a href="https://doi.org/10.1109/ICGRID.2006.311010">https://doi.org/10.1109/ICGRID.2006.311010</a>
-<li>
-Jim Basney, Patrick Flanigan, Jin Heo, Himanshu Khurana, Joe Muggli,
+<li>Jim Basney, Patrick Flanigan, Jin Heo, Himanshu Khurana, Joe Muggli,
 Meenal Pant, Adam Slagell and Von Welch,
-"Mithril: Adaptable Security for Survivability in Collaborative
-Computing Sites,"
+"Mithril: Adaptable Security for Survivability in Collaborative Computing Sites,"
 Workshop on Enterprise Network Security (WENS), 
 in conjunction with SecureComm, 
 September 2006.
 <a href="https://doi.org/10.1109/SECCOMW.2006.359560">https://doi.org/10.1109/SECCOMW.2006.359560</a>
-<li>
-R. Butler, M. Servilla, S. Gage, J. Basney, V. Welch,
+<li>R. Butler, M. Servilla, S. Gage, J. Basney, V. Welch,
 B. Baker, T. Fleury, P. Duda, D. Gehrig, M. Bletzinger, J. Tao, 
 D. M. Freemon,
 "CyberInfrastructure for the Analysis of Ecological Acoustic Sensor
 Data: A Use Case Study in Grid Deployment,"
-Challenges of Large Applications in Distributed Environments
-(CLADE 2006)
+Challenges of Large Applications in Distributed Environments (CLADE 2006)
 Workshop (associated with the 15th International Symposium on High Performance Distributed Computing),
 Paris, France, June 19, 2006.
 <a href="https://doi.org/10.1007/s10586-007-0033-8">https://doi.org/10.1007/s10586-007-0033-8</a>
-<li>
-Adam J. Lee, Marianne Winslett, Jim Basney, and Von Welch, 
-"Traust: A Trust Negotiation-Based Authorization Service for Open
-Systems," 
+<li>Adam J. Lee, Marianne Winslett, Jim Basney, and Von Welch, 
+"Traust: A Trust Negotiation-Based Authorization Service for Open Systems," 
 The Eleventh ACM Symposium on Access Control Models and Technologies
 (SACMAT), June 2006.
 <a href="https://doi.org/10.1145/1133058.1133066">https://doi.org/10.1145/1133058.1133066</a>
-<li>
-A. J. Lee, M. Winslett, J. Basney, and V. Welch, "Traust: A Trust
+<li>A. J. Lee, M. Winslett, J. Basney, and V. Welch, "Traust: A Trust
 Negotiation Based Authorization Service," Demonstration Short Paper,
 Fourth International Conference on Trust Management (iTrust 2006),
 May 2006.
-<li>
-Tom Barton, Jim Basney, Tim Freeman, Tom Scavo, Frank Siebenlist, Von
-Welch, Rachana Ananthakrishnan, Bill Baker, Monte Goode, and Kate
-Keahey,
+<li>Tom Barton, Jim Basney, Tim Freeman, Tom Scavo, Frank Siebenlist, Von
+Welch, Rachana Ananthakrishnan, Bill Baker, Monte Goode, and Kate Keahey,
 "Identity Federation and Attribute-based Authorization through
 the Globus Toolkit, Shibboleth, Gridshib, and MyProxy,"
 5th Annual PKI R&amp;D Workshop, 
@@ -411,8 +359,7 @@ Reunion Island, April 2005.
 <a href="https://doi.org/10.1007/978-3-540-31957-3_75">https://doi.org/10.1007/978-3-540-31957-3_75</a>
 <li>Jim Basney, Shiva Shankar Chetan, Feng Qin, Sumin Song, Xiao Tu, and
 Marty Humphrey, "An OGSI CredentialManager Service," 
-Proceedings of the 
-Workshop on Grid Security Practice and Experience
+Proceedings of the  Workshop on Grid Security Practice and Experience
 (UK e-Science Security Task Force), Oxford, 8-9 July 2004.
 Published as: University of York Department of Computer Science
 Technical Report YCS-2004-380.
@@ -420,21 +367,17 @@ Technical Report YCS-2004-380.
 <a href="OGSICM.ppt">[ppt]</a>
 <li>Mehran Ahsant, Jim Basney, and Olle Mulmo,
 "Grid Delegation Protocol," 
-Proceedings of the 
-Workshop on Grid Security Practice and Experience
+Proceedings of the Workshop on Grid Security Practice and Experience
 (UK e-Science Security Task Force), Oxford, 8-9 July 2004.
 Published as: University of York Department of Computer Science
-Technical Report 
-YCS-2004-380.
+Technical Report YCS-2004-380.
 <a href="Grid-Delegation-Protocol.pdf">[pdf]</a>
 <li>Jim Jokl, Jim Basney, and Marty Humphrey,
 "Experiences using Bridge CAs for Grids,"
-Proceedings of the 
-Workshop on Grid Security Practice and Experience
+Proceedings of the Workshop on Grid Security Practice and Experience
 (UK e-Science Security Task Force), Oxford, 8-9 July 2004.
 Published as: University of York Department of Computer Science
-Technical Report 
-YCS-2004-380.
+Technical Report YCS-2004-380.
 <a href="BridgeCAGridSecWorkshop2004.pdf">[pdf]</a>
 <li>Jim Basney, Wolfgang Nejdl, Daniel Olmedilla, Von Welch, and
 Marianne Winslett, "Negotiating Trust on the Grid,"
@@ -443,8 +386,7 @@ International World Wide Web Conference, New York, May 2004.
 <a href="sempgrid.pdf">[pdf]</a>
 <li>Markus Lorch, Jim Basney, and Dennis Kafura,
 "A Hardware-secured Credential Repository for Grid PKIs,"
-4th IEEE/ACM International
-Symposium on Cluster Computing and the Grid (CCGrid2004), 
+4th IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGrid2004), 
 Chicago, Illinois, April 19-22, 2004.
 <a href="https://doi.ieeecomputersociety.org/10.1109/CCGrid.2004.1336679">https://doi.ieeecomputersociety.org/10.1109/CCGrid.2004.1336679</a>
 <a href="myproxy-ccgrid2004.pdf">[pdf]</a>
