--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@ Twitter: <a href="https://twitter.com/JimBasney">@JimBasney</a><br>
 <p>
 Please contact me for a free copy of any publication listed below.
 <ul>
+<li>Brian Aydemir, Jim Basney, Brian Bockelman, Jeff Gaynor and Derek Weitzel. 2022.
+  SciAuth: A Lightweight End-to-End Capability-Based Authorization Environment for Scientific Computing.
+  In Practice and Experience in Advanced Research Computing (PEARC '22),
+  July 10–14, 2022, Boston, MA, USA. ACM, New York, NY, USA.  
+<li>Isuru Ranawaka, Nuwan Goonasekara, Enis Afgan, Jim Basney, Suresh Marru and Marlon Pierce. 2022.
+  Custos Secrets: a Service for Managing User-Provided Resource Credential Secrets for Science Gateways.
+  In Practice and Experience in Advanced Research Computing (PEARC '22),
+  July 10–14, 2022, Boston, MA, USA. ACM, New York, NY, USA.
 <li>Isuru Ranawaka, Samitha Liyanage, Dannon Baker, Alexandru Mahmoud, Juleen Graham, Terry Fleury, 
   Dimuthu Wannipurage, Yu Ma, Enis Afgan, Jim Basney, Suresh Marru, and Marlon Pierce. 2021. 
   Science Gateway Integration Examples with the Custos Security Service.
@@ -48,7 +56,7 @@ Please contact me for a free copy of any publication listed below.
   Basney, Terry Fleury, Jeff Gaynor, Dimuthu Wannipurage, Marcus
   Christie, Alexandru Mahmoud, Enis Afgan, and Marlon
   Pierce. 2020. Custos: Security Middleware for Science Gateways. In
-  Practice and Experience in Advanced Research Computing (PEARC ’20), July
+  Practice and Experience in Advanced Research Computing (PEARC '20), July
   26–30, 2020, Portland, OR, USA. ACM, New York, NY, USA, 13 pages.
   <a href="https://doi.org/10.1145/3311790.3396635">https://doi.org/10.1145/3311790.3396635</a>
 <li>You Alex Gao, Jim Basney, and Alex Withers. 2020. SciTokens SSH:
