--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ Please contact me for a free copy of any publication listed below.
   SciAuth: A Lightweight End-to-End Capability-Based Authorization Environment for Scientific Computing.
   In Practice and Experience in Advanced Research Computing (PEARC '22),
   July 10–14, 2022, Boston, MA, USA. ACM, New York, NY, USA.  
+  <a href="https://doi.org/10.1145/3491418.3535160">https://doi.org/10.1145/3491418.3535160</a>
+  <a href="SciAuth_PEARC22_AuthorVersion.pdf">[pdf]</a>
 <li>Isuru Ranawaka, Nuwan Goonasekara, Enis Afgan, Jim Basney, Suresh Marru and Marlon Pierce. 2022.
   Custos Secrets: a Service for Managing User-Provided Resource Credential Secrets for Science Gateways.
   In Practice and Experience in Advanced Research Computing (PEARC '22),
