--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ ORCID iD: <a href="https://orcid.org/0000-0002-0139-0640">https://orcid.org/0000
 <h2 id="projects">Current Projects</h2>
 <UL>
 <li><a href="https://www.cilogon.org/">CILogon</a>
+<li><a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2138307">COre National Ecosystem for CyberinfrasTructure</a> (CONECT)
 <li><a href="https://airavata.apache.org/custos/">Custos</a>
 <li><a href="https://www.xsede.org">Extreme Science and Engineering Discovery Environment</a> (XSEDE)
 <li><a href="https://sciauth.org/">SciAuth</a>
