--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ Please contact me for a free copy of any publication listed below.
   Custos Secrets: a Service for Managing User-Provided Resource Credential Secrets for Science Gateways.
   In Practice and Experience in Advanced Research Computing (PEARC '22),
   July 10–14, 2022, Boston, MA, USA. ACM, New York, NY, USA.
+  <a href="https://doi.org/10.1145/3491418.3535177">https://doi.org/10.1145/3491418.3535177</a>
 <li>Isuru Ranawaka, Samitha Liyanage, Dannon Baker, Alexandru Mahmoud, Juleen Graham, Terry Fleury, 
   Dimuthu Wannipurage, Yu Ma, Enis Afgan, Jim Basney, Suresh Marru, and Marlon Pierce. 2021. 
   Science Gateway Integration Examples with the Custos Security Service.
