--- a/index.html
+++ b/index.html
@@ -529,6 +529,10 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Propelling Australia’s Digital Life Science Research with Collaborative Research Infrastructure,
+  TNC22, June 15, 2022.
+  <a href="tnc22-basney-scullen.pdf">[slides]</a>
+  <a href="https://tnc22.geant.org/recordings/?session=s40">[video]</a>
 <li>CILogon, MAGIC Meeting, April 6, 2022.
   <a href="20220406-cilogon-magic.pdf">[slides]</a>
 <li>Panel: Federated Login,
