--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ Principal Research Scientist<BR>
 <P>
 Email: <a href="mailto:jbasney@illinois.edu">jbasney@illinois.edu</a><br>
 GitHub: <a href="https://github.com/jbasney/">jbasney</a><br>
-OpenPGP key: <a href="0x52812B01FA8F67A9.txt">0x52812B01FA8F67A9</a><br>
-ORCID iD: <a href="https://orcid.org/0000-0002-0139-0640">https://orcid.org/0000-0002-0139-0640</a><br>
+OpenPGP: <a href="0x52812B01FA8F67A9.txt">0x52812B01FA8F67A9</a><br>
+ORCID: <a href="https://orcid.org/0000-0002-0139-0640">https://orcid.org/0000-0002-0139-0640</a><br>
 <h2 id="projects">Current Projects</h2>
 <UL>
 <li><a href="https://www.cilogon.org/">CILogon</a>
