--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@ Please contact me for a free copy of any publication listed below.
   SciAuth: A Lightweight End-to-End Capability-Based Authorization Environment for Scientific Computing.
   In Practice and Experience in Advanced Research Computing (PEARC '22),
   July 10–14, 2022, Boston, MA, USA. ACM, New York, NY, USA.  
-  <a href="https://doi.org/10.1145/3491418.3535160">https://doi.org/10.1145/3491418.3535160</a>
+  <a href="https://doi.org/h6g4">https://doi.org/h6g4</a>
   <a href="SciAuth_PEARC22_AuthorVersion.pdf">[pdf]</a>
 <li>Isuru Ranawaka, Nuwan Goonasekara, Enis Afgan, Jim Basney, Suresh Marru and Marlon Pierce. 2022.
   Custos Secrets: a Service for Managing User-Provided Resource Credential Secrets for Science Gateways.
   In Practice and Experience in Advanced Research Computing (PEARC '22),
   July 10–14, 2022, Boston, MA, USA. ACM, New York, NY, USA.
-  <a href="https://doi.org/10.1145/3491418.3535177">https://doi.org/10.1145/3491418.3535177</a>
+  <a href="https://doi.org/h82x">https://doi.org/h82x</a>
 <li>Isuru Ranawaka, Samitha Liyanage, Dannon Baker, Alexandru Mahmoud, Juleen Graham, Terry Fleury, 
   Dimuthu Wannipurage, Yu Ma, Enis Afgan, Jim Basney, Suresh Marru, and Marlon Pierce. 2021. 
   Science Gateway Integration Examples with the Custos Security Service.
   8th International Workshop on HPC User Support Tools
   (<a href="https://hust-workshop.github.io/">HUST</a>),
   November 2021.
-  <a href="https://doi.org/10.5281/zenodo.5749727">https://doi.org/10.5281/zenodo.5749727</a>
+  <a href="https://doi.org/h82z">https://doi.org/h82z</a>
 <li>Jim Basney, Phuong Cao, and Terry Fleury, "Investigating Root
   Causes of Authentication Failures Using a SAML and OIDC
   Observatory," IEEE 6th International Conference on Dependability in
   Sensor, Cloud and Big Data Systems and Applications (DependSys),
   December 2020.
-  <a href="https://doi.org/10.1109/DependSys51298.2020.00026">https://doi.org/10.1109/DependSys51298.2020.00026</a>
+  <a href="https://doi.org/h822">https://doi.org/h822</a>
   <a href="https://github.com/cilogon/DependSys2020">[data]</a>
 <li>Isuru Ranawaka, Suresh Marru, Juleen Graham, Aarushi Bisht, Jim
   Basney, Terry Fleury, Jeff Gaynor, Dimuthu Wannipurage, Marcus
@@ -58,13 +58,13 @@ Please contact me for a free copy of any publication listed below.
   Pierce. 2020. Custos: Security Middleware for Science Gateways. In
   Practice and Experience in Advanced Research Computing (PEARC '20), July
   26–30, 2020, Portland, OR, USA. ACM, New York, NY, USA, 13 pages.
-  <a href="https://doi.org/10.1145/3311790.3396635">https://doi.org/10.1145/3311790.3396635</a>
+  <a href="https://doi.org/h823">https://doi.org/h823</a>
 <li>You Alex Gao, Jim Basney, and Alex Withers. 2020. SciTokens SSH:
   Token-based Authentication for Remote Login to Scientific
   Computing Environments. In Practice and Experience in Advanced
   Research Computing (PEARC ’20), July 26-30, 2020, Portland, OR, USA.
   ACM, New York, NY, USA, 7 pages.
-  <a href="https://doi.org/10.1145/3311790.3399613">https://doi.org/10.1145/3311790.3399613</a>
+  <a href="https://doi.org/h824">https://doi.org/h824</a>
 <li>Lee Liming, Jim Basney, John Paul Navarro, and Shava
   Smallen. 2020. Use Case Methodology in XSEDE System Integration. In
   Practice and Experience in Advanced Research Computing (PEARC ’20), July
