--- a/index.html
+++ b/index.html
@@ -1103,6 +1103,12 @@ See also:
 <a href="https://www.nsf.gov/awardsearch/advancedSearchResult?PIFirstName=James&PILastName=Basney&IncludeCoPI=true&ActiveAwards=true&ExpiredAwards=true">NSF
 Award Search</a>
 <ul>
+<li>PI: Emad Tajkhorshid,
+  Co-PIs: James Basney, Seid Koric.
+  Title: Collaborative Research: Frameworks: Cybershuttle: An end-to-end Cyberinfrastructure Continuum to accelerate Discovery in Science and Engineering.
+  Duration: September 2022 to August 2027.
+  Amount: $1,600,001.
+  Source: National Science Foundation award number <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2209875">2209875</a>.
 <li>PI: James Basney,
   Co-PIs: Brian Bockelman, Derek Weitzel.
   Title: CICI: UCSS: SciAuth: Deploying Interoperable and Usable
