--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,10 @@ NCSA Condor-G Academy, August 27, 2001.
 </ul>
 <h2 id="posters">Posters</h2>
 <ul>
+<li>CILogon,
+NSF Research Infrastructure Workshop,
+September 2022.
+<a href="2022-cilogon-poster.pdf">[pdf]</a>
 <li>Distributed Web Security for Science Gateways,
 NSF Secure and Trustworthy Cyberspace (SaTC) Principal Investigators' Meeting,
 November 2012.
