--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ ORCID: <a href="https://orcid.org/0000-0002-0139-0640">https://orcid.org/0000-00
 <li><a href="https://www.cilogon.org/">CILogon</a>
 <li><a href="https://operations.access-ci.org/">COre National Ecosystem for CyberinfrasTructure</a> (CONECT)
 <li><a href="https://airavata.apache.org/custos/">Custos</a>
+<li><a href="https://cybershuttle.org/">Cybershuttle</a>
 <li><a href="https://sciauth.org/">SciAuth</a>
 <li><a href="https://scitokens.org/">SciTokens</a>
 <li><a href="https://trustedci.org/">Trusted CI</a>
