--- a/index.html
+++ b/index.html
@@ -1108,6 +1108,12 @@ See also:
 <a href="https://www.nsf.gov/awardsearch/advancedSearchResult?PIFirstName=James&PILastName=Basney&IncludeCoPI=true&ActiveAwards=true&ExpiredAwards=true">NSF
 Award Search</a>
 <ul>
+<li>PI: James Basney,
+  Co-PIs: Barton Miller, Sean Peisert, Kelli Shute.
+  Title: CICI: CCoE: Trusted CI: Advancing Trustworthy Science
+  Duration: September 2022 to September 2024.
+  Amount: $6,498,601.
+  Source: National Science Foundation award number <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2241313">2241313</a>.  
 <li>PI: Emad Tajkhorshid,
   Co-PIs: James Basney, Seid Koric.
   Title: Collaborative Research: Frameworks: Cybershuttle: An end-to-end Cyberinfrastructure Continuum to accelerate Discovery in Science and Engineering.
@@ -1125,8 +1131,8 @@ Award Search</a>
 <li>PI: Von Welch,
   Co-PIs: Barton Miller, James Basney, Sean Peisert, Kelli Shute.
   Title: CICI: CCoE: Trusted CI: Advancing Trustworthy Science.
-  Duration: October 2019 to September 2024.
-  Amount: $12,486,560.
+  Duration: October 2019 to September 2022.
+  Amount: $6,100,842.
   Source: National Science Foundation award number <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1920430">1920430</a>.
   <a href="https://www.trustedci.org/s/Trusted-CI-19-514-pruned.pdf">[pdf]</a>
 <li>PI: Marlon Pierce,
