--- a/index.html
+++ b/index.html
@@ -529,6 +529,23 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Research Cybersecurity Insights for 2022,
+  EDUCAUSE Conference, October 26, 2022.
+  <a href="202210-trusted-ci-educause.pdf">[slides]</a>
+<li>Trusted CI Update,
+  NSF Cybersecurity Summit, October 19, 2022.
+  <a href="2022-trusted-ci-summit-update.pdf">[slides]</a>
+<li>CILogon JWT Update,
+  NSF Cybersecurity Summit Workshop on Token-Based Authentication and Authorization,
+  October 18, 2022.
+  <a href="202210-cilogon-tokens.pdf">[slides]</a>
+<li>Welcome, Trusted CI Cybersecurity Workshop at the
+  NSF Research Infrastructure Workshop, September 16, 2022.
+  <a href="202209-trusted-ci-riw-welcome.pdf">[slides]</a>
+<li>CILogon AWS Update,
+  AWS Lunch &amp; Learn at University of Illinois,
+  June 28, 2022.
+  <a href="202206-cilogon-aws.pdf">[slides]</a>
 <li>Propelling Australia’s Digital Life Science Research with Collaborative Research Infrastructure,
   TNC22, June 15, 2022.
   <a href="tnc22-basney-scullen.pdf">[slides]</a>
