--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ OpenPGP: <a href="0x52812B01FA8F67A9.txt">0x52812B01FA8F67A9</a><br>
 ORCID: <a href="https://orcid.org/0000-0002-0139-0640">https://orcid.org/0000-0002-0139-0640</a><br>
 <h2 id="projects">Current Projects</h2>
 <UL>
+<li><a href="https://operations.access-ci.org/">ACCESS Operations</a>
 <li><a href="https://www.cilogon.org/">CILogon</a>
-<li><a href="https://operations.access-ci.org/">COre National Ecosystem for CyberinfrasTructure</a> (CONECT)
 <li><a href="https://airavata.apache.org/custos/">Custos</a>
 <li><a href="https://cybershuttle.org/">Cybershuttle</a>
 <li><a href="https://sciauth.org/">SciAuth</a>
