--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@ July 22, 2001.
 <li>Trusted CI Update,
   NSF Cybersecurity Summit, October 19, 2022.
   <a href="2022-trusted-ci-summit-update.pdf">[slides]</a>
+  <a href="https://youtu.be/psppkbRKJhQ">[video]</a>
 <li>CILogon JWT Update,
   NSF Cybersecurity Summit Workshop on Token-Based Authentication and Authorization,
   October 18, 2022.
