--- a/index.html
+++ b/index.html
@@ -540,6 +540,7 @@ July 22, 2001.
   NSF Cybersecurity Summit Workshop on Token-Based Authentication and Authorization,
   October 18, 2022.
   <a href="202210-cilogon-tokens.pdf">[slides]</a>
+  <a href="https://youtu.be/AiYWNHQaMKE?t=8248">[video]</a>
 <li>Welcome, Trusted CI Cybersecurity Workshop at the
   NSF Research Infrastructure Workshop, September 16, 2022.
   <a href="202209-trusted-ci-riw-welcome.pdf">[slides]</a>
