--- a/index.html
+++ b/index.html
@@ -529,6 +529,10 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>FIM4ACCESS,
+  16th FIM4R Workshop & TAGPMA,
+  December 4, 2022.
+  <a href="202212-access-ci-iam-basney.pdf">[slides]</a>
 <li>Research Cybersecurity Insights for 2022,
   EDUCAUSE Conference, October 26, 2022.
   <a href="202210-trusted-ci-educause.pdf">[slides]</a>
