--- a/index.html
+++ b/index.html
@@ -529,6 +529,20 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Research Cybersecurity Insights for 2022,
+  Internet2 Technology Exchange,
+  December 8, 2022.  
+  <a href="20221208-basney-trustedci.pdf">[slides]</a>
+<li>Panel: Making it Sticky: Offering Shared Services via InCommon Glue,
+  Internet2 Technology Exchange,
+  December 7, 2022.
+<li>Panel: The InCommon Catalysts for the Community,
+  Internet2 Technology Exchange,
+  December 7, 2022.
+<li>Panel: Migrating to Token-Based AuthN and AuthZ,
+  Internet2 Technology Exchange,
+  December 6, 2022.
+  <a href="TechEx22-Tokens-Basney.pptx">[slides]</a>
 <li>FIM4ACCESS,
   16th FIM4R Workshop & TAGPMA,
   December 4, 2022.
