--- a/index.html
+++ b/index.html
@@ -529,6 +529,9 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>The Year Ahead in IAM: Ideas & Insights from InCommon Catalysts,
+  IAM Online,
+  January 25, 2023.
 <li>Research Cybersecurity Insights for 2022,
   Internet2 Technology Exchange,
   December 8, 2022.  
