--- a/index.html
+++ b/index.html
@@ -529,6 +529,9 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>CILogon,
+  InCommon Collaboration Success Program: Office Hours,
+  January 26, 2023.
 <li>The Year Ahead in IAM: Ideas & Insights from InCommon Catalysts,
   IAM Online,
   January 25, 2023.
