--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@ July 22, 2001.
 <li>CILogon,
   InCommon Collaboration Success Program: Office Hours,
   January 26, 2023.
+  <a href="202301-cilogon-basney-csp.pdf">[slides]</a>
 <li>The Year Ahead in IAM: Ideas & Insights from InCommon Catalysts,
   IAM Online,
   January 25, 2023.
