--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@ July 22, 2001.
 <li>The Year Ahead in IAM: Ideas & Insights from InCommon Catalysts,
   IAM Online,
   January 25, 2023.
+  <a href="https://youtu.be/hWa7ZUE27WE">[video]</a>
 <li>Research Cybersecurity Insights for 2022,
   Internet2 Technology Exchange,
   December 8, 2022.  
