--- a/index.html
+++ b/index.html
@@ -528,6 +528,10 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>The Trusted CI Framework,
+  3rd High-Performance Computing Security Workshop,
+  March 15-16, 2023.
+  <a href="20230315-nist-hpc-security-trustedci.pdf">[slides]</a>
 <li>CILogon,
   InCommon Collaboration Success Program: Office Hours,
   January 26, 2023.
