--- a/index.html
+++ b/index.html
@@ -528,6 +528,10 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>A Brief Introduction to Trusted CI,
+  MS-CC Annual meeting,
+  May 11, 2023.
+  <a href="202305-basney-trustedci.pdf">[slides]</a>
 <li>The Trusted CI Framework,
   3rd High-Performance Computing Security Workshop,
   March 15-16, 2023.
