--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@ Please contact me for a free copy of any publication listed below.
   Scientific Data. In Practice and Experience in Advanced Research Computing (PEARC ’23), July 23–27, 2023,
   Portland, OR, USA. ACM, New York, NY, USA, 6 pages.
   <a href="https://doi.org/10.1145/3569951.3597566">https://doi.org/10.1145/3569951.3597566</a> (To Appear)
+<li>Suresh Marru, Marlon Pierce, Beth Plale, Sudhakar Pamidighantam, Dimuthu Wannipurage, Marcus Christie, Isuru Ranawaka, Eroma Abeysinghe, Rob Quick, Emad Tajkhorshid, Seid Koric, Jim Basney, Mariano Spivak, Barry Isralewitz, Rafael Bernardi, Diego Gomes, Giri Krishnan, Maxim Bazhenov, Shava Smallen, Amit Majumdar, Anton Arkhipov, Kael Dai and Xiao-Ping Liu.
+  2023. Cybershuttle: An end-to-end Cyberinfrastructure Continuum to accelerate Discovery in Science and Engineering.
+  In Practice and Experience in Advanced Research Computing (PEARC ’23), July 23–27, 2023,
+  Portland, OR, USA. ACM, New York, NY, USA, 9 pages.
+  <a href="https://doi.org/10.1145/3569951.3593602">https://doi.org/10.1145/3569951.3593602</a> (To Appear)
 <li>Md Arifuzzaman, Brian Bockelman, Jim Basney, and Engin Arslan.
   Falcon: Fair and Efficient Online File Transfer Optimization.
   IEEE Transactions on Parallel and Distributed Systems (TPDS), 2023.
