--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: home
 <img src="Basney.jpeg" alt="" width="144" height="192">
 <p>
 Principal Research Scientist<BR>
-<a href="https://security.ncsa.illinois.edu/">Cybersecurity Division</a><br>
+<a href="https://security.ncsa.illinois.edu/">Cybersecurity</a><br>
 <a href="https://www.ncsa.illinois.edu/">National Center for Supercomputing Applications</a><BR>
 <a href="https://illinois.edu/">University of Illinois at Urbana-Champaign</a><BR>
 <P>
@@ -1299,7 +1299,7 @@ Source: National Science Foundation award number
 <h2 id="service">Service</h2>
 <ul>
 <li>National Science Foundation Funding Panel Review Member:
-  2004, 2005, 2018, 2019
+  2004, 2005, 2018, 2019, 2023
 <li>Program Committee Member: ISWC 2004 Trust Workshop, DIVO 2004, MGC 2004,
   MGC 2005, HPDC-15, WASR 2006, Grid 2006, MGC 2006, GCE 2006, CCGrid 2007, AINA 2007,
   WWW 2007, 2007 IEEE TCSC Doctoral Symposium,
