--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Please contact me for a free copy of any publication listed below.
 <li>Md Arifuzzaman, Brian Bockelman, Jim Basney, and Engin Arslan.
   Falcon: Fair and Efficient Online File Transfer Optimization.
   IEEE Transactions on Parallel and Distributed Systems (TPDS), 2023.
-  <a href="https://doi.org/10.1109/TPDS.2023.3282872">https://doi.org/10.1109/TPDS.2023.3282872</a> (To Appear)
+  <a href="https://doi.org/10.1109/TPDS.2023.3282872">https://doi.org/10.1109/TPDS.2023.3282872</a>
 <li>Brian Aydemir, Jim Basney, Brian Bockelman, Jeff Gaynor and Derek Weitzel. 2022.
   SciAuth: A Lightweight End-to-End Capability-Based Authorization Environment for Scientific Computing.
   In Practice and Experience in Advanced Research Computing (PEARC '22),
