--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Please contact me for a free copy of any publication listed below.
   <a href="https://doi.org/10.1145/3569951.3593602">https://doi.org/10.1145/3569951.3593602</a> (To Appear)
 <li>Md Arifuzzaman, Brian Bockelman, Jim Basney, and Engin Arslan.
   Falcon: Fair and Efficient Online File Transfer Optimization.
-  IEEE Transactions on Parallel and Distributed Systems (TPDS), 2023.
+  IEEE Transactions on Parallel and Distributed Systems (TPDS), vol. 34, no. 8, pp. 2265-2278, August 2023.
   <a href="https://doi.org/kdps">https://doi.org/kdps</a>
 <li>Brian Aydemir, Jim Basney, Brian Bockelman, Jeff Gaynor and Derek Weitzel. 2022.
   SciAuth: A Lightweight End-to-End Capability-Based Authorization Environment for Scientific Computing.
