--- a/index.html
+++ b/index.html
@@ -542,6 +542,10 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Trustworthy Cyberinfrastructure,
+  NSF Research Infrastructure Workshop,
+  June 29, 2023.
+  <a href="20230629-trustedci-basney-riw.pdf"<[slides]</a>
 <li>A Brief Introduction to Trusted CI,
   MS-CC Annual meeting,
   May 11, 2023.
