--- a/index.html
+++ b/index.html
@@ -542,6 +542,10 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Migrating to Token-based Authorization: Experiences &amp; Lessons Learned,
+  Throughput Computing (HTC 23),
+  July 11, 2023.
+  <a href="htc23-basney.pdf">[slides]</a>
 <li>Trustworthy Cyberinfrastructure,
   NSF Research Infrastructure Workshop,
   June 29, 2023.
