--- a/index.html
+++ b/index.html
@@ -1178,9 +1178,15 @@ See also:
 <a href="https://www.nsf.gov/awardsearch/advancedSearchResult?PIFirstName=James&PILastName=Basney&IncludeCoPI=true&ActiveAwards=true&ExpiredAwards=true">NSF
 Award Search</a>
 <ul>
+<li>PI: Phuong Cao, 
+  Co-PIs: Ravishankar Iyer, James Basney, Alexander Withers.
+  Title: FMitF: Track II: Bringing Verification-Aware Languages and Federated Authentication to Enable Secure Computing for Scientific Communities.
+  Duration: August 2023 to January 2025.
+  Amount: $99,999.
+  Source: National Science Foundation award number <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2319190">2319190</a>.  
 <li>PI: James Basney,
   Co-PIs: Barton Miller, Sean Peisert, Kelli Shute.
-  Title: CICI: CCoE: Trusted CI: Advancing Trustworthy Science
+  Title: CICI: CCoE: Trusted CI: Advancing Trustworthy Science.
   Duration: September 2022 to September 2024.
   Amount: $6,498,601.
   Source: National Science Foundation award number <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2241313">2241313</a>.  
