--- a/index.html
+++ b/index.html
@@ -542,6 +542,11 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>The Trusted CI Framework for Cybersecurity Programs,
+  MS-CC All Hands Meeting,
+  August 24, 2023.
+  <a href="202308-trustedci-ms-cc.pdf">[slides]</a>
+  <a href="https://www.youtube.com/watch?v=6i8nfz4Narg">[video]</a>
 <li>Migrating to Token-based Authorization: Experiences &amp; Lessons Learned,
   Throughput Computing (HTC 23),
   July 11, 2023.
