--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@ July 22, 2001.
   Throughput Computing (HTC 23),
   July 11, 2023.
   <a href="htc23-basney.pdf">[slides]</a>
+  <a href="https://youtu.be/vrUKH-JCOd0">[video]</a>
 <li>Trustworthy Cyberinfrastructure,
   NSF Research Infrastructure Workshop,
   June 29, 2023.
